Show complete account names when they have '<' in their name

When an account name contains the less-than character followed by text,
that part is removed from the name in HTML based views (home view and
reports).

Escaping the less-than and greater-than characters to their HTML
equivalent solves the problem and all of the name is displayed.

BUG: 424188

(cherry picked from commit 5ce752748e70f66bfbf65cb93196b286971a6fe0)